2004-01-21  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Cleanup and add more comments.

2004-01-17  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Fix a double-free.

2004-01-17  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Use the translated string in the pattern drop-downs.

2004-01-17  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.c:
	* src/cd-drive.h:
	* src/transport.hxx:
	Update from libbacon.

2004-01-13  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Add back the GNOME standard properties to gnome_program_init(),
	whoops. Thanks to jrb for noticing.

2004-01-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	* data/sound-juicer.glade:
	Add a virtual penis, showing the estimated duration and ripping
	speed. Thanks to Bastien for this patch.

2004-01-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Keep the ID of the idle callback, and remove it when we're done.

2004-01-07  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* configure.in:
	Version 0.5.9.

2004-01-05  Ross Burton  <ross@burtonini.com>

	* sound-juicer.spec.in:
	Minor working change to the description.

2004-01-04  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	And fix a typo too. Turns out the new tagging code has never been
	used...

2004-01-04  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Include config.h.

2004-01-03  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	* src/sj-extractor.c:
	* src/sj-main.c:
	* src/sj-prefs.c:
	* src/sj-util.c:
	Plug lots of memory leaks. Patch mostly from Michael Henson
	<mike@axl.net>.

2004-01-03  Colin Walters  <walters@verbum.org>

	* src/sj-main.c (reread_cd): Pop statusbar loading message if
	there's no CDROM available.

2003-12-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* omf.make: fix DESTDIR installs and other scrollkeeper problems
	* xmldocs.make: for make distcheck to work

2003-12-15  Ross Burton  <ross@burtonini.com>
