@@ -3,6 +3,9 @@
 	* configure.in:
 	Cleanup and add more comments.
 
+	* src/Makefile.am: 
+	Ditto.
+
 2004-01-17  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
